chore: remove unnecessary files and fix SonarCloud issues
Cleaned up unused files and resolved static analysis warnings reported by SonarCloud. Includes minor code refactoring and formatting adjustments to align with project quality standards.

Signed-off-by: Keys <70819367+keys-i@users.noreply.github.com>